--- a/travis.yml
+++ b/travis.yml
@@ -4,6 +4,6 @@ language:
 node_js:
   - node
 
-after_script:
-  - node node_modules/codeclimate-test-reporter/bin/codeclimate < coverage/lcov.info
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+# after_script:
+#   - node node_modules/codeclimate-test-reporter/bin/codeclimate < coverage/lcov.info
+#   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
