update configuration files

--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,21 @@
 {
   "development": {
-    "username": "oredavids",
-    "password": null,
-    "database": "database_development",
+    "username": "mogims",
+    "password": "password",
+    "database": "testdb",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "oredavids",
-    "password": null,
-    "database": "database_test",
+    "username": "mogims",
+    "password": "password",
+    "database": "testdb",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "oredavids",
+    "use_env_variable": "DATABASE_URL",
+    "username": null,
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
