--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "homepage": "https://github.com/andela-oagunbiade/doc-mgt-system#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
+    "jsonwebtoken": "^7.2.1",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.27.0"
