--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,14 @@ engines:
   eslint:
     enabled: true
     channel: "eslint-3"
+    checks:
+      import/no-unresolved:
+        enabled: false
+  duplication:
+    enabled: false
+    config:
+      languages:
+        - javascript
 
 ratings:
   paths:
