--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ node_js:
 services:
   - postgresql
 
-
-
+before_script:
+  - psql -c 'create database testdb;' -U postgresql
+  - npm run db:test
 # after_script:
 #   - node node_modules/codeclimate-test-reporter/bin/codeclimate < coverage/lcov.info
 #   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
