--- a/config/config.json
+++ b/config/config.json
@@ -2,13 +2,13 @@
   "development": {
     "username": "mogims",
     "password": "password",
-    "database": "testdb",
+    "database": "doc-mgt",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "mogims",
-    "password": "password",
+    "username": null,
+    "password": null,
     "database": "testdb",
     "host": "127.0.0.1",
     "dialect": "postgres"
