--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.27.0",
+    "sequelize-cli": "^2.5.1",
     "supertest": "^2.0.1"
   },
   "devDependencies": {
