--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
   - postgresql
 
 before_script:
-  - psql -c 'create database testdb;' -U postgresql
+  - psql -c 'create database testdb;' -U postgres
   - npm run db:test
 
 # after_script:
