--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "gulp default",
     "lint": "eslint .",
     "test": "istanbul cover _mocha -- -R spec test/**/*.spec.js",
-    "db:test": "NODE_ENV=test sequelize db:migrate"
+    "db:migrate": "sequelize db:migrate"
   },
   "repository": {
     "type": "git",
