--- a/config/config.json
+++ b/config/config.json
@@ -13,6 +13,13 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
+  "travis": {
+    "username": null,
+    "password": null,
+    "database": "testdb",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
+  },
   "production": {
     "use_env_variable": "DATABASE_URL",
     "username": null,
