add after script to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ before_script:
   - NODE_ENV=travis npm run db:migrate
 
 
-# after_script:
-#   - node node_modules/codeclimate-test-reporter/bin/codeclimate < coverage/lcov.info
-#   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+after_script:
+  - node node_modules/codeclimate-test-reporter/bin/codeclimate < coverage/lcov.info
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 addons:
   - postgresql: "9.3"
