--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,10 @@
 {
   "development": {
-    "username": "mogims",
-    "password": "password",
-    "database": "testdb",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  },
-  "test": {
-    "username": null,
-    "password": null,
-    "database": "testdb",
-    "host": "127.0.0.1",
+    "use_env_variable": "DEV_DATABASE_URL",
     "dialect": "postgres"
   },
   "travis": {
-    "username": null,
-    "password": null,
-    "database": "testdb",
-    "host": "127.0.0.1",
+    "use_env_variable": "TRAVIS_DATABASE_URL",
     "dialect": "postgres"
   },
   "production": {
