--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
-DB_NAME=
-DB_USERNAME=
-DB_PASSWORD=
-DB_HOST=127.0.0.1
+Format
+DB_URL=postgres://username:password@host:port/DB_NAME
+
+Sample
+DEV_DATABASE_URL=postgres://heroku:github@127.0.0.1:5432/andelaDb
