--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai": "^3.5.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "faker": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "jsonwebtoken": "^7.2.1",
