--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,7 @@
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "arrow-body-style": 0,
-    "curly": [2, "multi"],
+    "curly": [2, "multi-line"],
     "no-shadow": [2, { "allow": ["req", "res", "err"] }],
     "valid-jsdoc": [2, {
       "requireReturn": true,
