--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,16 @@
 {
   "root": true,
   "extends": "airbnb-base",
+  "plugins": [
+    "react"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "env": {
     "node": true,
     "es6": true,
