--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "babel-node ./tools/startMessage.js",
     "start": "npm-run-all --parallel open:src",
-    "open:src": "babel-node ./tools/srcServer.js",
+    "open:src": "babel-watch ./tools/srcServer.js",
     "lint": "eslint .",
     "lint:watch": "npm run lint -- --watch",
     "test": "istanbul cover _mocha -- -R spec test/**/*.spec.js",
@@ -31,59 +31,60 @@
   },
   "homepage": "https://github.com/andela-oagunbiade/doc-mgt-system#readme",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.2",
-    "chai": "^3.5.0",
-    "dotenv": "^4.0.0",
-    "express": "^4.14.0",
-    "faker": "^3.1.0",
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
-    "jsonwebtoken": "^7.2.1",
-    "pg": "^6.1.0",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^3.27.0",
-    "sequelize-cli": "^2.5.1",
-    "supertest": "^2.0.1",
-    "babel-polyfill": "6.8.0",
-    "bootstrap": "3.3.6",
-    "jquery": "2.2.3",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.0",
-    "react-router-redux": "4.0.4",
-    "redux": "3.5.2",
-    "redux-thunk": "2.0.1",
-    "toastr": "2.1.2",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
+    "babel-watch": "^2.0.6",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "bootstrap": "3.3.6",
+    "chai": "^3.5.0",
     "cheerio": "0.22.0",
     "colors": "1.1.2",
     "compression": "1.6.1",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
+    "dotenv": "^4.0.0",
     "enzyme": "2.2.0",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.19.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "1.0.1",
+    "faker": "^3.1.0",
     "file-loader": "0.8.5",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "jquery": "2.2.3",
     "jsdom": "8.5.0",
+    "jsonwebtoken": "^7.2.1",
     "mocha": "2.4.5",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
+    "react": "15.0.2",
     "react-addons-test-utils": "15.0.2",
+    "react-dom": "15.0.2",
+    "react-redux": "4.4.5",
+    "react-router": "2.4.0",
+    "react-router-redux": "4.0.4",
+    "redux": "3.5.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
+    "redux-thunk": "2.0.1",
     "rimraf": "2.5.2",
+    "sequelize": "^3.27.0",
+    "sequelize-cli": "^2.5.1",
     "style-loader": "0.13.1",
+    "supertest": "^2.0.1",
+    "toastr": "2.1.2",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
