--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint:watch": "npm run lint -- --watch",
     "test": "istanbul cover _mocha -- -R spec test/**/*.spec.js",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
-    "db:seed": "node_modules/.bin/sequelize db:seed:all"
+    "db:seed": "node_modules/.bin/sequelize db:seed:all",
+    "test:db:migrate": "NODE_ENV=test node_modules/.bin/sequelize db:migrate",
+    "test:db:migrate:undo:all": "NODE_ENV=test node_modules/.bin/sequelize db:migrate:undo:all"
   },
   "repository": {
     "type": "git",
