--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "prestart": "babel-node ./tools/startMessage.js",
-    "start": "npm-run-all --parallel open:src",
+    "start": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-watch ./tools/srcServer.js",
-    "lint": "eslint .",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
     "test": "istanbul cover _mocha -- -R spec test/**/*.spec.js",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
@@ -65,7 +65,7 @@
     "jquery": "2.2.3",
     "jsdom": "8.5.0",
     "jsonwebtoken": "^7.2.1",
-    "mocha": "2.4.5",
+    "mocha": "^3.1.2",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
@@ -100,7 +100,6 @@
     "eslint-plugin-react": "^7.0.1",
     "eslint-watch": ">=2.1.11",
     "istanbul": "^0.4.5",
-    "mocha": "^3.1.2",
     "mocha-lcov-reporter": "^1.2.0"
   }
 }
