--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "redux-thunk": "2.0.1",
