--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "prestart": "babel-node ./tools/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-watch ./tools/srcServer.js",
-    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint": "node_modules/.bin/esw webpack.config.* app config db src test tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "istanbul cover _mocha -- -R spec test/**/*.spec.js",
+    "test": "NODE_ENV=test istanbul cover _mocha -- -R spec test/**/*.spec.js",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
+    "db:migrate:undo:all": "node_modules/.bin/sequelize db:migrate:undo:all",
     "db:seed": "node_modules/.bin/sequelize db:seed:all",
     "test:db:migrate": "NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "test:db:migrate:undo:all": "NODE_ENV=test node_modules/.bin/sequelize db:migrate:undo:all"
@@ -62,6 +63,7 @@
     "file-loader": "0.8.5",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "2.2.3",
     "jsdom": "8.5.0",
     "jsonwebtoken": "^7.2.1",
