chore(environment): refactor environment setup and reflect same in readme.md

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-Format
+Postgres DB URL Format
 DB_URL=postgres://username:password@host:port/DB_NAME
 
-Sample
-TEST_DATABASE_URL=postgres://heroku:github@127.0.0.1:5432/andelaDb
+Sample .env
+//create two dbs for testing and development
+DEV_DATABASE_URL=postgres://heroku:github@127.0.0.1:5432/doc-mgt-sys
+TEST_DATABASE_URL=postgres://heroku:github@127.0.0.1:5432/test-doc-mgt-sys
