--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
 
 before_script:
   - psql -c 'create database testdb;' -U postgres
-  - NODE_ENV=travis npm run db:migrate
+  - NODE_ENV=test npm run db:migrate
 
 
 after_script:
