--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/andela-oagunbiade/doc-mgt-system#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
@@ -97,7 +98,7 @@
   },
   "devDependencies": {
     "codeclimate-test-reporter": "^0.4.0",
-    "eslint": ">=3.10.1",
+    "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": ">=2.2.0",
     "eslint-plugin-react": "^7.0.1",
