--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/andela-oagunbiade/doc-mgt-system#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
@@ -67,18 +68,22 @@
     "jquery": "2.2.3",
     "jsdom": "8.5.0",
     "jsonwebtoken": "^7.2.1",
+    "material-ui": "^0.18.3",
     "mocha": "^3.1.2",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
-    "react": "15.0.2",
+    "prop-types": "^15.5.10",
+    "react": "15.4.0",
     "react-addons-test-utils": "15.0.2",
-    "react-dom": "15.0.2",
+    "react-dom": "15.4.0",
     "react-redux": "4.4.5",
-    "react-router": "2.4.0",
+    "react-router": "3.0.5",
     "react-router-redux": "4.0.4",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-textfield": "0.0.5",
     "redux": "3.5.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable-state-invariant": "1.2.3",
@@ -97,7 +102,7 @@
   },
   "devDependencies": {
     "codeclimate-test-reporter": "^0.4.0",
-    "eslint": ">=3.10.1",
+    "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": ">=2.2.0",
     "eslint-plugin-react": "^7.0.1",
