--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prestart": "babel-node ./tools/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch",
+    "silent:start": "npm start --silent",
     "open:src": "babel-watch ./tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* app config db src test tools",
     "lint:watch": "npm run lint -- --watch",
@@ -68,7 +69,6 @@
     "jquery": "2.2.3",
     "jsdom": "8.5.0",
     "jsonwebtoken": "^7.2.1",
-    "material-ui": "^0.18.3",
     "mocha": "^3.1.2",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
@@ -78,6 +78,7 @@
     "prop-types": "^15.5.10",
     "react": "15.4.0",
     "react-addons-test-utils": "15.0.2",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "15.4.0",
     "react-redux": "4.4.5",
     "react-router": "3.0.5",
