--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ Sample .env
 //create two dbs for testing and development
 DEV_DATABASE_URL=postgres://heroku:github@127.0.0.1:5432/doc-mgt-sys
 TEST_DATABASE_URL=postgres://heroku:github@127.0.0.1:5432/test-doc-mgt-sys
+SMS_SERVER_URL=https://an.sms.server
+SMS_SERVER_USERNAME=username
+SMS_SERVER_PASSWORD=password
